[package]
name = "rust-multi-multi"
version = "0.1.0"
description = "Multi file multi executable crate"
edition = "2021"
license = "MIT"
authors = ["Hans Ulrich Niedermann <hun@n-dimensional.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
